***LAST commit before creating a separate branch to implement Angela's Layout***

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
 
     <string name="starting_from_intent">STARTING_FROM_INTENT</string>
     <string name="title_activity_maps">Map</string>
+
+    <string name="dashOpen">Open Dashboard</string>
+    <string name="dashClose">Close Dashboard</string>
+
 </resources>
